--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,19 @@
+a{
+  width: 80%;
+  display: block;
+  text-align: left;
+  color: white;
+  font-weight: bold;
+  font-size: 50px;
+  margin: 0 auto;
+}
+main{
+  width: 100%;
+}
 .header-head{
   width: 100%;
   height: 200px;
-  background: red;
+
 }
 
 .logo{
@@ -16,4 +28,33 @@
   background: yellow;
   height: 100%;
   float: left;
+}
+
+.box{
+  width: 50%;
+  height: 600px;
+  float: left;
+  display: table;
+}
+.sub-box{
+  display: table-cell;
+  vertical-align: middle;
+}
+.back1{
+  background: #eb4034;
+}
+.back2{
+  background: #ad3028;
+}
+.back3{
+  background: #db3b30;
+}
+.back4{
+  background: #bd332a;
+}
+
+@media (max-width: 800px){
+  .box{
+    width: 100%;
+  }
 }
