--- a/css/styles.css
+++ b/css/styles.css
@@ -7,35 +7,37 @@ a{
   font-size: 50px;
   margin: 0 auto;
 }
+
 main{
   width: 100%;
 }
+
 .header-head{
   width: 100%;
   height: 200px;
-
+  background: #d13126;
 }
 
 .logo{
   width: 22%;
-  background-color: green;
   height: 100%;
   float: left;
 }
 
 .header-element{
   width: 13%;
-  background: yellow;
   height: 100%;
   float: left;
+  text-align: center;
 }
 
 .font-menu-title{
   font-family: 'Fredoka One', cursive;
   color: white;
   font-size: 26px;
-  font-weight: 300px;
-  text-shadow: 1px 1px black;
+  font-weight: 100;
+  text-shadow: 1px 1px 1px #454545;
+  margin-top:
 }
 
 .font-menu-sub-title{
@@ -51,19 +53,24 @@ main{
   float: left;
   display: table;
 }
+
 .sub-box{
   display: table-cell;
   vertical-align: middle;
 }
+
 .back1{
   background: #eb4034;
 }
+
 .back2{
   background: #ad3028;
 }
+
 .back3{
   background: #db3b30;
 }
+
 .back4{
   background: #bd332a;
 }
