--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,4 @@
-a{
-  width: 80%;
-  display: block;
-  text-align: left;
-  color: white;
-  font-weight: bold;
-  font-size: 50px;
-  margin: 0 auto;
-}
+
 
 main{
   width: 100%;
@@ -14,7 +6,7 @@ main{
 
 .header-head{
   width: 100%;
-  height: 200px;
+  height: 220px;
   background: #d13126;
 }
 
@@ -57,8 +49,30 @@ main{
 .sub-box{
   display: table-cell;
   vertical-align: middle;
-}
 
+}
+.my-a{
+  width: 80%;
+  text-align: left;
+  color: white;
+  font-weight: 400;
+  margin: 0 auto;
+  font-family: 'Fredoka One', cursive;
+  text-shadow: 1px 1px 0 black;
+}
+.box-a-middle{
+  font-size: 50px;
+  display: block;
+}
+.box-a-top{
+  font-size: 20px;
+  display: block;
+}
+.box-a-bottom{
+  font-size: 20px;
+  display: block;
+
+}
 .back1{
   background: #eb4034;
 }
@@ -79,3 +93,10 @@ main{
   .box{
     width: 100%;
   }
+}
+
+@media (min-width: 2600px){
+  .box{
+    width: 25%;
+  }
+}
