--- a/css/styles.css
+++ b/css/styles.css
@@ -8,19 +8,41 @@ main{
   width: 100%;
   height: 220px;
   background: #d13126;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .logo{
+  text-align: center;
   width: 22%;
-  height: 100%;
-  float: left;
+  background: blue;
+}
+
+.nav-menu{
+  display: flex;
+  background: yellow;
+  flex-basis: 65%;
 }
 
 .header-element{
-  width: 13%;
-  height: 100%;
-  float: left;
   text-align: center;
+  background: green;
+}
+
+.div-nav-btn{
+  width: 200px;
+}
+
+.nav-button{
+  background: none;
+  color: white;
+  font-family: 'Fredoka One', cursive;
+  height: 50px;
+  width: 130px;
+  border: solid 3px white;
+  border-radius: 7px;
+  font-size: 20px;
 }
 
 .font-menu-title{
@@ -59,6 +81,12 @@ main{
   font-family: 'Fredoka One', cursive;
   text-shadow: 1px 1px 0 black;
 }
+
+.my-a:hover{
+  text-decoration: none;
+  color: white;
+}
+
 .box-a-middle{
   font-size: 50px;
   display: block;
