--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,16 @@ main{
   text-decoration: none;
   color: white;
 }
+.my-a-extra{
+  color: white;
+}
+.my-a-extra-margin{
+  margin-left: 20px;
+}
+.my-a-extra:hover{
+  text-decoration: none;
+  color: white;
+}
 
 .box-a-middle{
   font-size: 50px;
@@ -121,7 +131,7 @@ main{
     width: 100%;
   }
   .box-a-middle{
-    font-size: 30px;
+    font-size: 35px;
   }
   .box-a-top{
     font-size: 15px;
