Added the links to the menu. Improved styles for menu

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ main{
 
 .header-head{
   width: 100%;
-  height: 220px;
+  height: 200px;
   background: #d13126;
   display: flex;
   align-items: center;
@@ -30,8 +30,34 @@ main{
   background: green;
 }
 
+.a-menu{
+  color: white;
+  text-shadow: 1px 1px 1px #454545;
+}
+
+.a-menu:hover{
+  text-decoration: none;
+  color: black;
+  transition: color 0.15s ease-in-out;
+  text-shadow: none;
+}
+
+.font-menu-title{
+  font-family: 'Fredoka One', cursive;
+  font-size: 26px;
+  font-weight: 100;
+}
+
+.font-menu-sub-title{
+  font-family: 'Martel', serif;
+  font-style: italic;
+  font-size: 14px;
+}
+
 .div-nav-btn{
-  width: 200px;
+  background: yellow;
+  width: 180px;
+  text-align: center;
 }
 
 .nav-button{
@@ -43,22 +69,6 @@ main{
   border: solid 3px white;
   border-radius: 7px;
   font-size: 20px;
-}
-
-.font-menu-title{
-  font-family: 'Fredoka One', cursive;
-  color: white;
-  font-size: 26px;
-  font-weight: 100;
-  text-shadow: 1px 1px 1px #454545;
-  margin-top:
-}
-
-.font-menu-sub-title{
-  font-family: 'Martel', serif;
-  font-style: italic;
-  color: white;
-  font-size: 14px;
 }
 
 .box{
