--- a/css/styles.css
+++ b/css/styles.css
@@ -1,36 +1,32 @@
-
-
 main{
   width: 100%;
 }
 
 .header-head{
   width: 100%;
-  height: 200px;
+  height: 180px;
   background: #d13126;
   display: flex;
   align-items: center;
-  justify-content: center;
 }
 
 .logo{
   text-align: center;
-  width: 22%;
-  background: blue;
+  flex-basis: 20%;
 }
 
 .nav-menu{
   display: flex;
-  background: yellow;
   flex-basis: 65%;
 }
 
 .header-element{
   text-align: center;
-  background: green;
 }
 
 .a-menu{
+  display: block;
+  padding: 2px;
   color: white;
   text-shadow: 1px 1px 1px #454545;
 }
@@ -38,8 +34,28 @@ main{
 .a-menu:hover{
   text-decoration: none;
   color: black;
-  transition: color 0.15s ease-in-out;
+  transition: color 0.2s ease-in-out;
   text-shadow: none;
+}
+
+.a-menu:hover .nav-img{
+  transform: none;
+  transition: transform .2s ease-out;
+}
+
+.a-menu:active, .a-menu:focus{
+  border: dotted 2px grey;
+  text-decoration: none;
+  text-shadow: none;
+  color: black;
+}
+
+.nav-img{
+  width: 32px;
+  margin-bottom: 20px;
+  transform: rotate(-11deg);
+  transition: transform .2s ease-out;
+  transform-origin: 0 100%;
 }
 
 .font-menu-title{
@@ -52,11 +68,11 @@ main{
   font-family: 'Martel', serif;
   font-style: italic;
   font-size: 14px;
+  margin-top: 10px;
 }
 
 .div-nav-btn{
-  background: yellow;
-  width: 180px;
+  width: 200px;
   text-align: center;
 }
 
