--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,6 @@ main{
 
 .header-head{
   width: 100%;
-  height: 180px;
   background: #d13126;
   display: flex;
   align-items: center;
@@ -13,11 +12,16 @@ main{
 .logo{
   text-align: center;
   flex-basis: 20%;
+  margin-left: 2%;
+  margin-top: 1%;
 }
 
 .nav-menu{
   display: flex;
   flex-basis: 65%;
+  justify-content: space-between;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .header-element{
@@ -44,15 +48,16 @@ main{
 }
 
 .a-menu:active, .a-menu:focus{
-  border: dotted 2px grey;
+  border: dotted 4px rgba(0, 0, 0, .4);
   text-decoration: none;
   text-shadow: none;
   color: black;
+  margin: -4px;
 }
 
 .nav-img{
   width: 32px;
-  margin-bottom: 20px;
+  margin-bottom: 16px;
   transform: rotate(-11deg);
   transition: transform .2s ease-out;
   transform-origin: 0 100%;
@@ -60,7 +65,7 @@ main{
 
 .font-menu-title{
   font-family: 'Fredoka One', cursive;
-  font-size: 26px;
+  font-size: 2vw;
   font-weight: 100;
 }
 
@@ -68,11 +73,12 @@ main{
   font-family: 'Martel', serif;
   font-style: italic;
   font-size: 14px;
-  margin-top: 10px;
+  margin-top: 14px;
+  text-shadow: none;
 }
 
 .div-nav-btn{
-  width: 200px;
+  flex-basis: 17.5%;
   text-align: center;
 }
 
