--- a/css/styles.css
+++ b/css/styles.css
@@ -180,9 +180,6 @@ main{
 }
 
 .box{
-  width: 50%;
-  height: 100%;
-  float: left;
   position: relative;
   cursor: pointer;
 }
@@ -294,8 +291,9 @@ main{
   right: -22px;
 }
 .articles{
-  width: 100%;
-  height: 800px;
+  display: grid;
+  grid-template-columns: [col] 50% [col] 50%;
+  padding: 0;
   position: relative;
   background: black;
 }
@@ -306,16 +304,23 @@ main{
   font-size: 60px;
   color: white;
   position: absolute;
-  top: 85%;
-  left: 9%;
+  left: 10%;
+  top: 90%;
+  text-decoration: none;
+
+}
+.blue-square{
+  width: 100%;
+  height: 10px;
+  background: blue;
+}
+.blue-p{
+  margin-top: 50px;
 }
 
-
-
 @media (min-width: 3380px){
-  .box{
-    width: 25%;
-    height: 1400px;
+  .articles{
+    grid-template-columns: 25% 25% 25% 25%;
   }
   .box-a-middle{
     font-size: 100px;
@@ -329,25 +334,16 @@ main{
   .box-a-bottom{
     font-size: 40px;
   }
-
+  .my-row{
+    top:95%;
+  }
 }
 @media (min-width: 3300px){
-  .box{
-    width: 25%;
+  .articles{
+    grid-template-columns: 25% 25% 25% 25%;
   }
   .articles-padding-others{
     padding-top:150px;
-  }
-  .my-row{
-    top:92%;
-  }
-  .articles{
-    height: 1000px;
-  }
-}
-@media (max-width: 1400px){
-  .articles{
-    height: 900px;
   }
 }
 @media(max-width: 1340px){
@@ -361,11 +357,7 @@ main{
     display: inline;
   }
 }
-@media (max-width: 1200px){
-  .my-row{
-    top: 90%;
-  }
-}
+
 @media(max-width: 1100px){
   .font-menu-sub-title{
     display: none;
@@ -379,16 +371,13 @@ main{
     display: none;
   }
   .articles{
-    height: 600px;
+    grid-template-columns: [col] 100%;
   }
   .article-padding-top{
     padding-top: 100px;
   }
   .second-article-padding-top{
     padding-top: 0;
-  }
-  .box{
-    width: 100%;
   }
   .box-a-middle{
     font-size: 30px;
@@ -403,7 +392,7 @@ main{
     font-size: 15px;
   }
   .my-row{
-    top: 89%;
+    top:85%;
   }
 }
 @media(max-width: 917px){
