Created the grid for the articles

--- a/css/styles.css
+++ b/css/styles.css
@@ -364,6 +364,18 @@ li{
 .flex2{
   flex: 1 1 auto;
 }
+
+.wrapper{
+  display: grid;
+  grid-template-columns: repeat(auto-fit(minmax(300px, 1fr)));
+  grid-auto-rows: 100px;
+  margin: 0 auto;
+}
+
+.article-grid{
+  background: yellow;
+}
+
 @media (min-width: 3380px){
   .articles{
     grid-template-columns: 25% 25% 25% 25%;
