--- a/css/styles.css
+++ b/css/styles.css
@@ -367,8 +367,7 @@ li{
 
 .wrapper{
   display: grid;
-  grid-template-columns: repeat(auto-fit(minmax(300px, 1fr)));
-  grid-auto-rows: 100px;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   margin: 0 auto;
 }
 
