--- a/css/styles.css
+++ b/css/styles.css
@@ -366,6 +366,7 @@ li{
 }
 
 .wrapper{
+  max-width: 2050px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   margin: 0 auto;
