--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,14 @@
 main{
   width: 100%;
 }
-
-li{
-  font-size: 20px;
+footer{
+  background: #d33a2c;
+  padding: 70px;
   color: white;
-  list-style-type: square;
-  margin-left: 5%;
-  max-width: 30em;
-  margin-bottom: 10px;
+  text-align: center;
+  position: relative;
 }
+
 #button-blue-square{
   margin-top: 20px;
   max-width: 15em;
@@ -74,7 +73,73 @@ li{
   padding: 10px;
   font-weight: bold;
 }
-
+.a-footer{
+  color: white;
+}
+.a-footer:hover{
+  color: black;
+  text-decoration: none;
+}
+.img-bird-footer{
+  position: absolute;
+  left: 200px;
+  bottom: 30px;
+  z-index: 10;
+}
+.li-middle{
+  font-size: 20px;
+  color: white;
+  list-style-type: square;
+  margin-left: 5%;
+  max-width: 30em;
+  margin-bottom: 10px;
+}
+.ul-footer{
+  margin: 0 auto;
+  font-size: 20px;
+  width: 95%;
+  line-height: 2em;
+  margin-bottom: 35px;
+}
+.second-ul-footer{
+  width: 35%;
+  margin: 0 auto;
+  line-height: 2em;
+}
+.second-li-footer{
+  display:inline;
+  margin-left: 10px;
+  font-size: 17px;
+  text-decoration: underline;
+}
+.p-footer{
+  font-size: 16px;
+  font-style: italic;
+  margin: 0 auto;
+  width: 28%;
+  line-height: 1.8em;
+  margin-bottom: 50px;
+}
+.li-footer{
+  display:inline;
+  margin-left: 5px;
+}
+.special-point{
+  background: #242323;
+  display:inline-block;
+  width:10px; height:10px;
+  margin-bottom:2px;
+  border-radius:10px;
+  opacity: 0.6;
+}
+.li-footer:hover{
+  color: black;
+}
+.h4-footer{
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 35px;
+}
 .circle-square-container{
   position: absolute;
   width: 300px;
