--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,16 @@ footer{
   padding: 10px;
   font-weight: bold;
 }
+.img-ate-footer{
+  display: none;
+}
+.a-footer-bottom{
+  color: white;
+  text-decoration: underline;
+}
+.a-footer-bottom:hover{
+  color: white;
+}
 .a-footer{
   color: white;
 }
@@ -82,7 +92,7 @@ footer{
 }
 .img-bird-footer{
   position: absolute;
-  left: 200px;
+  left: 10%;
   bottom: 30px;
   z-index: 10;
 }
@@ -116,7 +126,7 @@ footer{
   font-size: 16px;
   font-style: italic;
   margin: 0 auto;
-  width: 28%;
+  width: 40%;
   line-height: 1.8em;
   margin-bottom: 50px;
 }
@@ -497,6 +507,9 @@ footer{
 .grid-image-cat{
   width: 200px;
 }
+.img-cat-footer{
+  display: none;
+}
 
 @media (min-width: 3380px){
   .articles{
@@ -540,12 +553,22 @@ footer{
   }
 }
 
-@media(min-width: 1400px){
+@media(max-width: 1400px){
   .nav-img{
     width: 4vh;
   }
   .font-menu-title{
     font-size: 4vh;
+  }
+  .img-bird-footer{
+    transform:scaleX(-1);
+  }
+  .img-cat-footer{
+    display: inline-block;
+    position: absolute;
+    right: 10%;
+    bottom: 30px;
+    z-index: 10;
   }
 }
 
@@ -559,6 +582,7 @@ footer{
   .logo-small{
     display: inline;
   }
+
 }
 
 @media(max-width: 1110px){
@@ -571,8 +595,23 @@ footer{
   .grid-image{
     grid-column: span 1;
   }
-}
 
+}
+@media (max-width: 1025px){
+  .img-cat-footer{
+    display: none;
+  }
+  .img-bird-footer{
+    display: none;
+  }
+  .img-ate-footer{
+    display: inline-block;
+    position: absolute;
+    left: 10%;
+    bottom: 30px;
+    z-index: 10;
+  }
+}
 @media (max-width: 1000px){
 
   #circle-container{
@@ -605,6 +644,7 @@ footer{
   .grid-image{
     grid-column: span 2;
   }
+
 }
 @media(max-width: 917px){
   .nav-menu{
