--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ main{
 }
 footer{
   background: #d33a2c;
-  padding: 70px;
+  padding: 70px 0;
   color: white;
   text-align: center;
   position: relative;
@@ -112,7 +112,7 @@ footer{
   margin-bottom: 35px;
 }
 .second-ul-footer{
-  width: 35%;
+  width: 513px;
   margin: 0 auto;
   line-height: 2em;
 }
@@ -126,7 +126,7 @@ footer{
   font-size: 16px;
   font-style: italic;
   margin: 0 auto;
-  width: 40%;
+  width: 430px;
   line-height: 1.8em;
   margin-bottom: 50px;
 }
@@ -570,6 +570,12 @@ footer{
     bottom: 30px;
     z-index: 10;
   }
+  .p-footer{
+    font-size:2.5vmin;
+  }
+  .second-ul-footer{
+    width: 40%;
+  }
 }
 
 @media(max-width: 1340px){
@@ -610,6 +616,9 @@ footer{
     left: 10%;
     bottom: 30px;
     z-index: 10;
+  }
+  .second-ul-footer{
+    width: 400px;
   }
 }
 @media (max-width: 1000px){
@@ -669,10 +678,32 @@ footer{
   #button-red{
     display: none;
   }
+  .img-ate-footer{
+    position: static;
+    display: block;
+  }
+  .ul-footer{
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    text-align: left;
+    font-size: 16px;
+  }
+  .special-point{
+    width: 5px;
+    height: 5px;
+  }
+  .li-footer{
+    display: list-item;
+  }
 }
 
 @media(max-width: 729px){
   .grid-image{
     grid-column: span 1;
+  }
+}
+@media(max-width: 645px){
+  .ul-footer{
+    grid-template-columns: 50% 50%;
   }
 }
