--- a/css/styles.css
+++ b/css/styles.css
@@ -8,23 +8,9 @@ footer{
   text-align: center;
   position: relative;
 }
-#button-red-block{
-  margin-top: 20px;
-  max-width: 15em;
-  padding: 20px;
-  border-radius: 7px;
-  background: white;
-  border: none;
-  font-family: 'Fredoka One', cursive;
-  color: #4287f5;
-  font-size: 25px;
-}
-#button-red-block:hover{
-  color: #d33a2c;
-}
+
 #button-blue-square{
   margin-top: 20px;
-  max-width: 15em;
   padding: 20px;
   border-radius: 7px;
   background: linear-gradient(to bottom, #a3ff57 30%,#355917);
@@ -86,6 +72,20 @@ footer{
   padding: 10px;
   font-weight: bold;
 }
+.button-red-block{
+  margin-top: 20px;
+  max-width: 20em;
+  padding: 20px;
+  border-radius: 7px;
+  background: white;
+  border: none;
+  font-family: 'Fredoka One', cursive;
+  color: #4287f5;
+  font-size: 25px;
+}
+.button-red-block:hover{
+  color: #d33a2c;
+}
 .span-red-block{
   font-size: 18px;
   color: white;
@@ -99,9 +99,11 @@ footer{
   text-decoration: underline;
   text-decoration-color: #9d9d9e;
   margin-bottom: 40px;
+  margin-top: 20px;
 }
 .h2-red-block:hover{
   color: white;
+  text-decoration-color: #9d9d9e;
 }
 .img-ate-footer{
   display: none;
@@ -453,6 +455,19 @@ footer{
   max-width: 35em;
   margin-bottom: 20px;
 }
+.green-p{
+  color: white;
+  font-size: 26px;
+  width: 60%;
+  margin: 0 auto;
+  margin-bottom: 40px;
+}
+.img-green-block{
+  width: 900px;
+  display: block;
+  margin: 0 auto;
+  margin-top: 70px;
+}
 .red-block-p{
   max-width: 45em;
 }
@@ -543,8 +558,20 @@ footer{
 .img-cat-footer{
   display: none;
 }
+.date-green-block{
+  font-size: 12px;
+  color: white;
+  margin-bottom: 40px;
+}
 .red-block{
   background: #d33a2c;
+}
+.green-block{
+  background: linear-gradient(to bottom, #018739 30%,#66bf43);
+  padding: 60px;
+  padding-bottom: 0;
+  text-align: center;
+  font-size: 20px;
 }
 
 @media (min-width: 3380px){
@@ -655,6 +682,22 @@ footer{
   }
   .second-ul-footer{
     width: 400px;
+  }
+  .img-green-block{
+    width: 100%;
+  }
+  .green-p{
+    width: 90%;
+    font-size: 4vmin;
+  }
+  .h2-sapn-green-block{
+    font-size: 7vmin;
+  }
+  .h2-red-block{
+    font-size: 7vmin;
+  }
+  .test{
+    font-size: 4vmin;
   }
 }
 @media (max-width: 1000px){
