--- a/css/styles.css
+++ b/css/styles.css
@@ -583,13 +583,47 @@ footer{
   margin-top: 45px;
 }
 
-.grid-image{
+.grid-image-wrapper{
+  display: grid;
   grid-column: span 2;
+  padding-top: 40px;
+  padding-bottom: 20px;
+}
+
+.grid-image{
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 25px;
+  margin-right: -15px;
+  border-radius: 12px;
+  background: #d13126;
+  text-align: center;
+  padding: 20px 100px;
 }
 
 .grid-image-cat{
-  width: 200px;
+  margin: 0 auto;
+  width: 250px;
 }
+
+.grid-image-text p{
+  color: white;
+  font-family: Elena;
+  font-size: calc(1.2em + .4vw);
+  line-height: calc(1.3em + .5vw);
+}
+
+.grid-image-text-h1 a{
+  margin: 20px 0;
+  display: inline-block;
+  font-family: 'Fredoka One', cursive;
+  color: white;
+  text-decoration: underline;
+  text-decoration-color: rgba(255,255,255, .5);
+}
+
 .img-cat-footer{
   display: none;
 }
@@ -741,7 +775,7 @@ footer{
   .logo-small{
     margin-top: 20%;
   }
-  .grid-image{
+  .grid-image-wrapper{
     grid-column: span 1;
   }
 
@@ -809,7 +843,7 @@ footer{
   .my-row{
     top:85%;
   }
-  .grid-image{
+  .grid-image-wrapper{
     grid-column: span 2;
   }
 
@@ -857,7 +891,7 @@ footer{
 }
 
 @media(max-width: 729px){
-  .grid-image{
+  .grid-image-wrapper{
     grid-column: span 1;
   }
 }
