shadow issues fixed and division-span resolution for mobiles changed

--- a/css/styles.css
+++ b/css/styles.css
@@ -476,11 +476,35 @@ footer{
   transform: rotate(-15deg);
   transition-duration: 0.5s;
   margin-top: -40px;
+  display: block;
 }
 .blue-square-img:hover{
   transform: rotate(0deg);
   transition-duration: 0.5s;
 }
+
+.book-shadow-container{
+  position: relative;
+  display: inline-block;
+}
+.red-block-img{
+  margin: 0 auto;
+}
+.red-block-img-shadow{
+  position: absolute;
+  height: 100px;
+  width: 300px;
+  bottom: -30px;
+  right: 20%;
+}
+.blue-square-img-shadow{
+  margin-top: -90px;
+}
+.blur-shadow{
+  filter: blur(10px);
+}
+
+
 .flex1{
   flex: 1 1 auto;
   padding:60px;
@@ -890,9 +914,16 @@ footer{
     flex-direction: column-reverse;
     align-items: center;
   }
+  .blue-square-img-shadow{
+    margin-top: -90px;
+  }
   .blue-square-img{
     margin-top: 50px;
     width: 140px;
+  }
+  .red-block-img-shadow{
+    width: 200px;
+    right: 0
   }
   #button-red{
     display: none;
@@ -941,5 +972,8 @@ footer{
   .input-red-img-square{
       padding: 20px;
       padding-right: 0;
+  }
+  .divison-a{
+    font-size: 12px;
   }
 }
