--- a/css/styles.css
+++ b/css/styles.css
@@ -523,6 +523,7 @@ footer{
   background: #f5f2f2;
   padding-left: 2%;
   padding-right: 2%;
+  padding-top: 1.5%;
 }
 
 .grid-article-article{
@@ -545,7 +546,8 @@ footer{
   transition-duration: 0.5s;
   transform: scale(1.04);
   z-index: 999;
-  box-shadow: 1px 1px 12px grey;
+  box-shadow: .1px .1px 40px black;
+  background: white;
 }
 
 .grid-article-article:hover .grid-article-title a{
