--- a/css/styles.css
+++ b/css/styles.css
@@ -169,7 +169,8 @@ footer{
 .special-point{
   background: #242323;
   display:inline-block;
-  width:10px; height:10px;
+  width:10px;
+  height:10px;
   margin-bottom:2px;
   border-radius:10px;
   opacity: 0.6;
@@ -693,6 +694,46 @@ footer{
   padding: 5px 5%;
 }
 
+.guides{
+  margin-left: 30px;
+  font-size: 12px;
+  color: grey;
+  font-family: Elena;
+}
+
+.guides-title{
+  margin: 20px 30px;
+  font-family: 'Fredoka One', cursive;
+  font-size: calc(2em + .2vw);
+}
+
+.guides-ul{
+  margin-left: 60px;
+  padding-bottom: 120px;
+  padding-top: 40px;
+  font-family: Elena;
+  font-size: 24px;
+  line-height: 40px;
+  text-decoration: underline;
+}
+
+.guides-ul-a{
+  color: #4287f5;
+}
+
+.guides-ul-a:hover{
+  color: #4287f5;
+}
+
+.circle-li{
+  width: 6px;
+  height: 6px;
+  margin-right: 10px;
+  margin-bottom: 3px;
+  opacity: 1;
+  background: #d13126;
+}
+
 .img-cat-footer{
   display: none;
 }
@@ -737,6 +778,7 @@ footer{
 .img-red-image-square{
   max-width: 500px;
   margin-bottom: 40px;
+  margin: 0 auto;
 }
 .p-red-img-square{
   margin: 0 auto;
@@ -876,6 +918,9 @@ footer{
   .grid-image{
     margin-right: 5%;
   }
+  .grid-image-whatever{
+    grid-column: span 2;
+  }
 }
 @media (max-width: 1025px){
   .img-cat-footer{
@@ -1007,6 +1052,7 @@ footer{
   .grid-image-wrapper{
     grid-column: span 1;
   }
+
 }
 @media(max-width: 645px){
   .ul-footer{
