--- a/css/styles.css
+++ b/css/styles.css
@@ -694,6 +694,10 @@ footer{
   padding: 5px 5%;
 }
 
+.grid-bottom-fixer{
+  display: block;
+}
+
 .guides{
   margin-left: 30px;
   font-size: 12px;
@@ -712,7 +716,7 @@ footer{
   padding-bottom: 120px;
   padding-top: 40px;
   font-family: Elena;
-  font-size: 24px;
+  font-size: 22px;
   line-height: 40px;
   text-decoration: underline;
 }
