--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+body{
+  background: #f5f2f2;
+}
 main{
   width: 100%;
 }
@@ -834,23 +837,31 @@ footer{
   display: flex;
   flex-direction: row;
   background: #f5f2f2;
+  max-width: 2050px;
+  margin: 0 auto;
 }
 
 .community-links-container{
   display: grid;
   max-width: 2050px;
-  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(700px, 1fr));
+  margin: 0 auto;
   padding: 4%;
+  margin-bottom: -100px;
 }
 
 .community-link{
   padding: 2%;
   display: flex;
   flex-direction: row;
+  margin-bottom: 100px;
 }
 
 .community-link-text{
-  
+
+}
+.img-user-extra{
+  border-color: #d33a2c;
 }
 
 .community-link-snippet{
