--- a/css/styles.css
+++ b/css/styles.css
@@ -1197,6 +1197,9 @@ footer{
     margin-left: 1%;
     margin-right: 1%;
   }
+  .community-link{
+    flex-direction: column;
+  }
 }
 
 @media(max-width: 550px){
