--- a/css/styles.css
+++ b/css/styles.css
@@ -528,8 +528,34 @@ footer{
   padding-left: 2%;
   padding-right: 2%;
   padding-top: 1.5%;
+  position: relative;
 }
-
+.relative-top-text{
+  position: absolute;
+  top: -20px;
+  left: 20px;
+  color: black;
+  font-size: 16px;
+  font-weight: bold;
+  transform-origin: left;
+  transform: rotate(90deg);
+  letter-spacing: 4px;
+  z-index: 10;
+}
+.fix-relative-top-text{
+  letter-spacing: 1px;
+  font-size: 14px;
+}
+.line-top-text{
+  display: inline-block;
+  background: black;
+  width: 50px;
+  height: 1px;
+  vertical-align: middle;
+}
+.fix-line-top-text{
+  width: 130px;
+}
 .grid-article-article{
   display: flex;
   flex: 1;
@@ -835,6 +861,8 @@ footer{
 
 .white-container{
   background: white;
+  position: relative;
+  padding-top: 50px;
 }
 
 .container-person-week{
@@ -1100,6 +1128,12 @@ footer{
     margin-right: 8%;
     padding-left: 10%;
     padding-right: 10%;
+  }
+  .relative-top-text{
+    transform: rotate(0);
+    top: .5%;
+    left: 5%;
+    font-size: calc(0.3em + 1vw);
   }
 }
 @media(max-width: 917px){
