--- a/css/styles.css
+++ b/css/styles.css
@@ -147,7 +147,7 @@ footer{
   margin-bottom: 35px;
 }
 .second-ul-footer{
-  width: 513px;
+  max-width: 513px;
   margin: 0 auto;
   line-height: 2em;
 }
@@ -161,7 +161,7 @@ footer{
   font-size: 16px;
   font-style: italic;
   margin: 0 auto;
-  width: 430px;
+  max-width: 430px;
   line-height: 1.8em;
   margin-bottom: 50px;
 }
@@ -1008,12 +1008,6 @@ footer{
     bottom: 30px;
     z-index: 10;
   }
-  .p-footer{
-    font-size:2.5vmin;
-  }
-  .second-ul-footer{
-    width: 40%;
-  }
 }
 
 @media(max-width: 1340px){
@@ -1069,9 +1063,6 @@ footer{
     left: 10%;
     bottom: 30px;
     z-index: 10;
-  }
-  .second-ul-footer{
-    width: 400px;
   }
   .img-green-block{
     width: 100%;
@@ -1271,5 +1262,13 @@ footer{
   }
   .span-red-img-square{
     font-size: 10px;
+  }
+}
+
+@media(max-width: 400px) {
+  .p-footer {
+    margin-left: 5px;
+    margin-right: 5px;
+    font-size: 14px;
   }
 }
